@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty attributes
skinparam classBackgroundColor beige
skinparam ArrowColor #222222

package "<<aggregate>> AGV" {
    entity AGV
    /'class AGVPosition'/
    class Model
}

package "<<aggregate>> AGVDock" {
    entity AGVDock
}

entity AGV <<entity>> <<root>> {
    - <<VO>> AgvID
    - <<VO>> AutonomyStatus /' number of hours left until it runs out of battery '/
    - <<VO>> TaskStatus /' free charging or occupied '/
}

entity AGVDock <<entity>> <<root>> {
    - <<VO>> DockID
    - <<VO>> BeginSquare
    - <<VO>> EndSquare
    - <<VO>> DepthSquare
    - <<VO>> AccessibilityDirection
}

class Model <<(V,#FF8B40) value object>> {
    - ModelID
    - ShortDescription
    - MaxWeight
}

AGV --> "1" Model
AGV ----> "1" AGVDock

@enduml